--- a/python_basics.ipynb
+++ b/python_basics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNX6pm0uOAV78NKvpb8gyaB",
+      "authorship_tag": "ABX9TyMmp6We9OK3FSAHORUmJb2u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,6 +36,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Simple variables and arithmatic operations"
+      ],
+      "metadata": {
+        "id": "t4j5c_L4xStZ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "a = 10 \n",
@@ -50,9 +59,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vm8hLxIhrQT8",
-        "outputId": "a2e479a0-ea83-493f-f5e1-34d7863642ad"
+        "outputId": "7780ecf3-2d09-4043-b518-aa01aecd9b0a"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -61,6 +70,49 @@
             "20.5\n",
             "0.5\n",
             "M My n\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Loops conditions\n"
+      ],
+      "metadata": {
+        "id": "j2H9NE_fxR3F"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if ( a == 20):\n",
+        "  print('I have passed');\n",
+        "else:\n",
+        "  print('I have failed');\n",
+        "\n",
+        "a = 20;\n",
+        "\n",
+        "if ( a == 20):\n",
+        "  print('I have repassed');\n",
+        "else:\n",
+        "  print('I have failed');"
+      ],
+      "metadata": {
+        "id": "yfu69oeCxecc",
+        "outputId": "98d6db95-bca3-4264-86ff-26224848393f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I have passed\n",
+            "I have repassed\n"
           ]
         }
       ]
